Fixed container alignment on standard pages

--- a/tbx/core/static/torchbox/css/main.scss
+++ b/tbx/core/static/torchbox/css/main.scss
@@ -2203,7 +2203,7 @@ footer {
     @media #{$tablet} {
       position: fixed;
       left: 0;
-      max-width: 1350px;
+      max-width: 1450px;
       right: 0;
       margin: 0 auto;
       padding: 15px 50px;
